--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,8 @@
-$violet: #000;
-$yellow: #F9C802;
+$bg-color: #3767AD;
+$bg-color-green: rgb(3, 117, 41);
+
+$black: #000;
+$white: #fff;
+$glass-grey: #ECEFF1;
+$glass-blue: #2196F3;
+$glass-green: rgb(50, 207, 102);
