--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,16 +1,91 @@
 @import "_normalize";
 @import "_variables";
-
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=latin-ext');
 
 html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
   box-sizing: inherit;
 }
 
 body {
-  color: $yellow;
-  background: $violet;
+  font-family: 'Roboto', sans-serif;
+  color: $white;
+  background-color: $bg-color-green;
+}
+
+.drink {
+  width: 100%;
+  padding: 50px 0 50px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  &__header {
+    margin-bottom: 40px;
+    max-width: 240px;
+    font-size: 30px;
+    line-height: 140%;
+    text-transform: uppercase;
+    text-align: center;
+  }
+
+  &__glass {
+    position: relative;
+    margin-bottom: 10px;
+  }
+
+  &__image {}
+
+  &__number {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-top: 30px;
+    font-size: 112px;
+    color: $black;
+  }
+
+  &__button {
+    margin-top: 30px;
+    width: 216px;
+    padding: 12px 0 12px 0;
+    border-style: none;
+    background-color: $glass-grey;
+
+    &--1 {
+      border-radius: 4px;
+      box-shadow: 1px 4px 8px 3px rgba($color: #000000, $alpha: .3);
+      font-size: 18px;
+      color: $black;
+      transition: .3s;
+
+      &:hover {
+        box-shadow: 1px 4px 8px 4px rgba($color: #000000, $alpha: .4);
+        transform: translateY(-3px);
+      }
+    }
+
+    &--2 {
+      background-color: transparent;
+      padding: 0;
+      font-size: 15px;
+      color: $glass-grey;
+      text-shadow: 1px 4px 7px rgba($color: #000000, $alpha: .9);
+      transition: .3s;
+
+      &:hover {
+        color: $black;
+        text-shadow: 1px 4px 5px rgba($color: #000, $alpha: 1);
+      }
+    }
+  }
 }
