--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 @import "_normalize";
 @import "_variables";
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=latin-ext');
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=latin-ext");
 
 html {
   box-sizing: border-box;
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: $white;
   background-color: $bg-color-green;
 }
@@ -42,7 +42,8 @@ body {
     margin-bottom: 10px;
   }
 
-  &__image {}
+  &__image {
+  }
 
   &__number {
     position: absolute;
@@ -63,28 +64,26 @@ body {
 
     &--1 {
       border-radius: 4px;
-      box-shadow: 1px 4px 8px 3px rgba($color: #000000, $alpha: .3);
+      box-shadow: 1px 4px 8px 3px rgba($color: #000000, $alpha: 0.3);
       font-size: 18px;
       color: $black;
-      transition: .3s;
+      transition: 0.3s;
 
       &:hover {
-        box-shadow: 1px 4px 8px 4px rgba($color: #000000, $alpha: .4);
+        box-shadow: 1px 4px 8px 4px rgba($color: #000000, $alpha: 0.4);
         transform: translateY(-3px);
       }
     }
 
     &--2 {
-      background-color: transparent;
-      padding: 0;
-      font-size: 15px;
+      background-color: $bg-color-green;
       color: $glass-grey;
-      text-shadow: 1px 4px 7px rgba($color: #000000, $alpha: .9);
-      transition: .3s;
+      text-shadow: 1px 4px 7px rgba($color: #000000, $alpha: 0.9);
+      transition: 0.3s;
 
       &:hover {
         color: $black;
-        text-shadow: 1px 4px 5px rgba($color: #000, $alpha: 1);
+        text-shadow: none;
       }
     }
   }
