--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,9 @@ body {
   font-family: "Roboto", sans-serif;
   color: $white;
   background-color: $bg-color-green;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .drink {
@@ -25,7 +28,7 @@ body {
   padding: 50px 0 50px 0;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 
   &__header {
@@ -43,6 +46,7 @@ body {
   }
 
   &__image {
+    width: 100%;
   }
 
   &__number {
