--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,14 +27,14 @@ body {
 
 .drink {
   width: 100%;
-  padding: 50px 0 50px 0;
+  padding: 30px 0 50px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
   &__header {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     max-width: 240px;
     font-size: 30px;
     line-height: 140%;
@@ -59,6 +59,7 @@ body {
     padding-top: 30px;
     font-size: 112px;
     color: $black;
+    font-weight: bold;
   }
 
   &__button {
@@ -92,6 +93,12 @@ body {
         text-shadow: none;
       }
     }
+
+    // &--3 {
+    //   width: 170px;
+    //   color: #444;
+    //   background-color: rgb(171, 212, 185);
+    // }
   }
 }
 
