feat: clear history button vol.1 clears all localStorage

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -94,11 +94,11 @@ body {
       }
     }
 
-    // &--3 {
-    //   width: 170px;
-    //   color: #444;
-    //   background-color: rgb(171, 212, 185);
-    // }
+    &--3 {
+      width: 170px;
+      color: #444;
+      background-color: rgb(171, 212, 185);
+    }
   }
 }
 
